# seedx-support-backend

./: .env  Dockerfile  README.MD  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py  models.py  schemas.py
app/services/: ai_service.py  auth.py  ticket.py
app/utils/: jwt_util.py
